Improved concurrency primitives usage and added perf test